# Mura

./: .gitignore  README.md  pyproject.toml
agents/: base.py  supplier_agent.py
backend/: PROGRESS.md  main.py
backend/agents/: base.py  compliance_agent.py  logistics_agent.py  orchestrator.py  supplier_agent.py
backend/agents/tools/: catalog_tools.py
backend/core/: memory.py  protocol.py  rl.py
backend/data/: supply_chain_data.json
backend/memory/: rl_bandit.json
backend/memory/sessions/: 2026-02-08.md
core/: protocol.py  registry.py
data/: supply_chain_data.json
sdk/: README.md  pyproject.toml
sdk/examples/: platform_integration.py  supplier_agent.py
sdk/mura/: __init__.py  client.py  exceptions.py  models.py  supplier.py
web/: bun.lockb  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/compliance/: route.ts
web/app/api/health/: route.ts
web/app/api/insights/: route.ts
web/app/api/logistics/: route.ts
web/app/api/procure/: route.ts
web/app/api/procure/stream/: route.ts
web/app/api/quote/: route.ts
web/app/api/registry/agents/: route.ts
web/app/api/registry/agents/[id]/: route.ts
web/app/api/registry/discover/: route.ts
web/app/api/suppliers/: route.ts
web/app/components/: AgentDetailPanel.tsx  AgentNetwork.tsx  AgentNode.tsx  ConnectionLine.tsx  LogPanel.tsx  ResultCard.tsx
web/app/docs/: page.tsx
web/app/lib/: api.ts
web/app/registry/: page.tsx
