[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mura-sdk"
version = "0.1.1"
description = "SDK for MURA - Supply Chain Agent Coordination Network"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mohanad Kandil", email = "mohanadmkandil@gmail.com" }
]
keywords = ["supply-chain", "procurement", "ai-agents", "nanda", "a2a"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/mohanadkandil/Mura"
Documentation = "https://github.com/mohanadkandil/Mura"
Repository = "https://github.com/mohanadkandil/Mura"

[tool.hatch.build.targets.wheel]
packages = ["mura"]
